this commit should fix any z-index issues  with buttons overlapping menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
     right: 20px;
     width: 26px;
     height: 26px;
-    z-index: 100;
+    z-index: 6;
 }
 
 .menu-btn > span,
@@ -96,7 +96,7 @@ body {
     background-color: var(--secondary);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .8);
     transition-duration: var(--transition-duration);
-    z-index: 99;
+    z-index: 5;
 }
 
 .menu-item {
